Bug 152822 - Modern IDB: Fix up IDBDatabaseIdentifier hash issues
Summary: Modern IDB: Fix up IDBDatabaseIdentifier hash issues
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 150882
  Show dependency treegraph
 
Reported: 2016-01-06 17:21 PST by Brady Eidson
Modified: 2016-01-06 18:09 PST (History)
5 users (show)

See Also:


Attachments
Patch v1 (2.67 KB, patch)
2016-01-06 17:23 PST, Brady Eidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-01-06 17:21:29 PST
Modern IDB: Fix up IDBDatabaseIdentifier hash issues

Cannot specifically test this, because it's the source of truly random flakes, but should be pretty noncontroversial.
Comment 1 Brady Eidson 2016-01-06 17:23:37 PST
Created attachment 268428 [details]
Patch v1
Comment 2 WebKit Commit Bot 2016-01-06 18:09:54 PST
Comment on attachment 268428 [details]
Patch v1

Clearing flags on attachment: 268428

Committed r194687: <http://trac.webkit.org/changeset/194687>
Comment 3 WebKit Commit Bot 2016-01-06 18:09:57 PST
All reviewed patches have been landed.  Closing bug.