Modern IDB: Fix up IDBDatabaseIdentifier hash issues. https://bugs.webkit.org/show_bug.cgi?id=152822

Reviewed by Alex Christensen.

No new tests (No explicitly testable behavior change, existing tests pass, flakiness will be reduced).

* Modules/indexeddb/IDBDatabaseIdentifier.h:
(WebCore::IDBDatabaseIdentifier::IDBDatabaseIdentifier):
(WebCore::IDBDatabaseIdentifier::isEmpty):
(WebCore::IDBDatabaseIdentifierHashTraits::isEmptyValue):
* page/SecurityOriginData.h:


Canonical link: https://commits.webkit.org/170911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194687 268f45cc-cd09-0410-ab3c-d52691b4dbfc